# src/components/student/student.controller.ts
@@ -1,6 +1,6 @@
 import { failedResponse, successResponse } from "../../utils/http";
-import { Controller, Route, Tags, Post, Body } from "tsoa";
-import { IStudent } from "./student.types";
+import { Controller, Route, Tags, Post, Body, Get, Put } from "tsoa";
+import { IStudent, IUpdateMember } from "./student.types";
 import Student from "./student.model";
 
 
@@ -22,6 +22,38 @@ export class StudentController extends Controller {
         }
     }
 
+    @Get('')
+    public async getAllEvent(): Promise<any> {
+        try {
+            const students = await Student.find({});
+            return successResponse(students);
+        } catch ( err ) {
+            this.setStatus(500);
+            return failedResponse(`${err}`, 'ServiceException');
+        }
+    }
+
+    @Put('/{studentId}')
+    public async updateMember(studentId: string, @Body() data: IUpdateMember): Promise<any>{
+        try{
+            if (await isExistMembers(studentId)) {
+                await Student.findByIdAndUpdate(studentId, data);
+                const member = await Student.findById(studentId);
+                return successResponse(member);
+            }
+            this.setStatus(200);
+            return failedResponse('Member is not found', 'MemberNotFound');
+        } catch (err) {
+            return failedResponse(`Error: ${err}`, 'ServiceException');
+        }
+    }
 }
 
 
+
+const isExistMembers = async (memberId: string): Promise<boolean> => {
+    const member = await Student.find({})
+            .where('_id').equals(memberId)
+            .exec();
+    return member.length > 0;
+}
