# src/components/student/student.types.ts
@@ -1,4 +1,13 @@
 export interface IStudent {
     name: string
     dob: Date
+    lop: String
+    mssv: String
+}
+
+
+export interface IUpdateMember {
+    name: string,
+    lop: string,
+    mssv: string
 }
